@@ -1,1 +1,2 @@
 from .avtovaz import AvtoVazDetails
+from .nissan import NissanDetails
