@@ -2,6 +2,11 @@ vininfo changelog
 =================
 
 
+Unreleased
+----------
++ Added basic info for Nissan.
+
+
 v0.1.0
 ------
 + Basic functionality.
